@@ -211,6 +211,7 @@ and <a href="http://packages.debian.org/testing/libs/libqof1">testing</a>.
 There are <b>test packages</b> available using a trivial apt repository.
 (the / at the end of the URL is important.)<br/>
 <code>deb http://www.linux.codehelp.co.uk/ packages/unstable/$(ARCH)/<br/>
+deb http://www.linux.codehelp.co.uk/ packages/unstable/all/<br/>
 deb-src http://www.linux.codehelp.co.uk/ packages/unstable/source/</code><br/>
 Please note that these are not the usual quality-assured Debian packages,
 these are only tests - demos if you will.</li></ul>
